# iil-reflex

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.windsurf/rules/: django-models-views.md  docker-deployment.md  htmx-templates.md  iil-packages.md  platform-principles.md  project-facts.md  reviewer.md  testing.md
.windsurf/workflows/: docu-update.md  knowledge-capture.md  session-docu.md  session-ende.md  session-start.md
reflex/: __init__.py  __main__.py  agent.py  classify.py  config.py  cycle.py  dashboard.py  infra.py  llm_providers.py  permission_runner.py  platform_runner.py  providers.py  quality.py  scaffold.py  types.py  uc_dialog.py  web.py
reflex/dashboard/: __init__.py  handler.py  health.py  registry.py  server.py  template.py
reflex/review/: __init__.py  engine.py  metrics.py  types.py
reflex/review/plugins/: __init__.py  adr_plugin.py  compose_plugin.py  controlling_plugin.py  infra_plugin.py  port_plugin.py  repo_plugin.py  (+2 more)
reflex/templates/: domain_interview.jinja2  domain_kb_distill.jinja2  domain_research.jinja2  failure_classify.jinja2  uc_quality_check.jinja2  wireframe_review.jinja2
tests/: conftest.py  test_agent.py  test_classify.py  test_cli.py  test_config.py  test_cycle.py  test_dashboard.py  test_infra.py  test_llm_providers.py  test_permission_runner.py  test_platform_runner.py  test_providers.py  test_quality.py  test_review_engine.py  test_review_plugins.py  test_review_types.py  test_scaffold.py  test_types.py  test_uc_dialog.py  test_web.py  test_web_pdf.py
