[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iil-reflex"
version = "0.1.0"
description = "REFLEX — Reflexive Evidence-based Loop for UI Development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Achim Dehnert", email = "achim@iil.gmbh" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "iil-promptfw>=0.7.0,<1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/achimdehnert/iil-reflex"
Repository = "https://github.com/achimdehnert/iil-reflex"
Documentation = "https://knowledge.iil.pet/doc/adr-162-reflex"

[tool.hatch.build.targets.wheel]
packages = ["reflex"]

[tool.hatch.build.targets.wheel.force-include]
"reflex/templates" = "reflex/templates"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
